# housou

./: .gitignore  Cargo.toml  README.md  wrangler.toml
.github/workflows/: ci.yml  lint-check.yml  lint-fix.yml
src/: config.rs  lib.rs  model.rs  provider.rs  utils.rs
src/provider/: anilist.rs  jikan.rs  tmdb.rs
verification/: verify_padding.py
web/: .prettierignore  index.html  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
web/public/: mockServiceWorker.js
web/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
web/src/components/: AnimeCard.tsx  AttributionModal.tsx  DetailsModal.test.tsx  DetailsModal.tsx  Footer.tsx  Header.tsx  TabbedGrid.tsx  WeekdaySelector.tsx
web/src/hooks/: useItems.test.ts  useItems.ts
web/src/mocks/: handlers.ts
web/src/utils/: errorUtils.ts  siteUtils.ts
