[package]
name = "housou"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
dev = []     # Use local data.json instead of fetching from GitHub

[dependencies]
worker = "0.7.4"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
console_error_panic_hook = "0.1.7"
worker-macros = "0.7.4"
regex = "1.12.3"
tmdb_client = { git = "https://github.com/asutorufa/tmdb-client-rs.git", branch = "master", default-features = false, features = [
    "async",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
